Toujours INDEXED pour avoir un fichier deps.zlc plus petit (20 fois plus petit)
Logs des temps plus compréhensible